k8s/drone-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: drone-runner
  namespace: infra
  labels:
    name: drone-runner
spec:
  replicas: 1
  selector:
    matchLabels:
      name: drone-runner
  template:
    metadata:
      labels:
        name: drone-runner
    spec:
      serviceAccount: drone
      containers:
      - name: runner
        image: drone/drone-runner-kube:latest
        ports:
        - containerPort: 3000
