k8s/pgsql-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: database
spec:
  ports:
  - port: 5432
  selector:
    app: pgsql
---
apiVersion: apps/v1 # for versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: pgsql
spec:
  selector:
    matchLabels:
      app: pgsql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: pgsql
    spec:
      containers:
      - image: postgres:12
        name: pgsql
        ports:
        - containerPort: 5432
          name: pgsql
        volumeMounts:
        - name: pgsql-persistent-storage
          mountPath: /var/lib/postgresql/data
      volumes:
      - name: pgsql-persistent-storage
        persistentVolumeClaim:
          claimName: pgsql-pv-claim
