k8s/gitea-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  - name: "222"
    port: 222
    targetPort: 22
  selector:
    name: gitea
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitea
spec:
  replicas: 1
  selector:
    matchLabels:
      name: gitea
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        name: gitea
    spec:
      containers:
      - env:
        - name: USER_GID
          value: "1000"
        - name: USER_UID
          value: "1000"
        - name: DB_TYPE
          value: postgres
        - name: DB_HOST
          value: database:5432
        - name: DB_NAME
          value: gitea
        - name: DB_USER
          value: gitea
        - name: DB_PASSWD
          value: gitea
        image: gitea/gitea:latest
        imagePullPolicy: ""
        name: server
        ports:
        - containerPort: 3000
        - containerPort: 22
        volumeMounts:
        - mountPath: /data
          name: gitea-persistent-storage
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
        - name: gitea-persistent-storage
          persistentVolumeClaim:
            claimName: gitea-pv-claim
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    name: gitea
  name: gitea
spec:
  rules:
    - host: git.mdcnet.int
      http:
        paths:
          - backend:
              serviceName: gitea
              servicePort: 3000
            path: /
