k8s/gitlab.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
    - port: 443
      targetPort: 443
      name: https
    - port: 22
      targetPort: 22
      name: ssh
  selector:
    app: gitlab
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gitlab
spec:
  selector:
    matchLabels:
      app: gitlab
  replicas: 1
  template:
    metadata:
      labels:
        app: gitlab
    spec:
      containers:
        - name: gitlab
          image: gitlab/gitlab-ce:latest
          ports:
            - name: http-port
              containerPort: 80
            - name: https-port
              containerPort: 443
            - name: ssh-port
              containerPort: 22
          volumeMounts:
            - name: gitlab-data
              mountPath: /var/opt/gitlab
      volumes:
        - name: gitlab-data
          persistentVolumeClaim:
            claimName: gitlab-claim
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: gitlab
  name: gitlab
spec:
  rules:
    -  http:
       host: gitlab.192.168.64.3.xip.io
        paths:
          - backend:
              serviceName: gitlab
              servicePort: http
            path: /
