k8s/jenkins.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenkins
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      name: http
    - port: 50000
      targetPort: 50000
      name: jnlp
  selector:
    app: jenkins
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins
spec:
  selector:
    matchLabels:
      app: jenkins
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      serviceAccountName: jenkins
      containers:
        - name: jenkins
          image: amioranza/jenkins:kube
          ports:
            - name: http-port
              containerPort: 8080
            - name: jnlp-port
              containerPort: 50000
          volumeMounts:
            - name: jenkins-home
              mountPath: /var/jenkins_home
          resources:
            limits:
              memory: 1950Mi
      volumes:
        - name: jenkins-home
          persistentVolumeClaim:
            claimName: jenkins-home-claim
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: jenkins
  name: jenkins
spec:
  rules:
    - host: jenkins.mdcnet.int
      http:
        paths:
          - backend:
              serviceName: jenkins
              servicePort: 8080
            path: /
