k8s/sonar-deployment.yaml
# Pre reqs de sistemas operacional
# sudo sysctl -w vm.max_map_count=262144
# sudo sysctl -w fs.file-max=65536
# sudo ulimit -n 65536
# sudo ulimit -u 4096
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: sonarqube
  name: sonarqube
spec:
  ports:
    - name: sonar
      port: 80
      protocol: TCP
      targetPort: 9000
  selector:
    app: sonarqube
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sonarqube
  name: sonarqube
spec:
  selector:
    matchLabels:
      app: sonarqube
  replicas: 1
  template:
    metadata:
      labels:
        app: sonarqube
    spec:
      containers:
        - name: sonarqube
          securityContext:
            runAsUser: 999
          image: sonarqube:community
          resources:
            requests:
              cpu: 500m
              memory: 1024Mi
            limits:
              cpu: 2000m
              memory: 2048Mi
          volumeMounts:
          - mountPath: "/opt/sonarqube/data/"
            name: sonar-data
          - mountPath: "/opt/sonarqube/extensions/"
            name: sonar-extensions
          - mountPath: "/opt/sonarqube/logs/"
            name: sonar-logs
          ports:
          - containerPort: 9000
            protocol: TCP
      volumes:
      - name: sonar-data
        persistentVolumeClaim:
          claimName: sonar-data
      - name: sonar-extensions
        persistentVolumeClaim:
          claimName: sonar-extensions
      - name: sonar-logs
        persistentVolumeClaim:
          claimName: sonar-logs
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    name: sonarqube
  name: sonarqube
spec:
  rules:
    - host: sonar.mdcnet.int
      http:
        paths:
          - backend:
              serviceName: sonarqube
              servicePort: sonar
            path: /
